Implement Distribution Display
-distribution display holds values on page's creation

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -85,6 +85,6 @@
     <string name = "scoreLabel">Score</string>
     <string name = "modLabel">Mod</string>
 
-    <string name = "modValue">%1$d</string>
+    <string name = "intItem">%1$d</string>
 
 </resources>
