Secondary Page Saving
-data now saves and loads for the character's secondary abilities
-continued conversion to kotlin

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -145,5 +145,6 @@
     <string name="scoreLabel">Score</string>
 
     <string name="intItem">%1$d</string>
+    <string name="togglePointInt">&#160;- %1$d</string>
 
 </resources>
