Implement Natural Checkbox
-user can now add their natural bonus to their secondary stats
-forbids addition if no points in stat or if no more natural bonuses available
-fixed save and exit glitch where performing both actions causes the app to crash
-small conversions to Kotlin

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -144,6 +144,9 @@
 
     <string name="scoreLabel">Score</string>
 
+    <string name="natNotTaken">+ 0</string>
+    <string name="natTaken">+ 5</string>
+
     <string name="intItem">%1$d</string>
     <string name="togglePointInt">&#160;- %1$d</string>
 
