--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,6 @@
 <resources>
     <string name="app_name">AnimaBuilder</string>
 
-
     <string name="nameText">Name:</string>
     <string name="classText">Class:</string>
     <string name="raceText">Race:</string>
@@ -76,12 +75,12 @@
         <item>20</item>
     </string-array>
 
-    <string name="totalLabel">\tTotal\t</string>
-    <string name="modLabel">\tMod\t</string>
+    <string name="totalLabel">Total</string>
+    <string name="modLabel">Mod</string>
 
-    <string name="dpCombatLabel">\tCombat\t</string>
-    <string name="dpMagicLabel">\tMagic\t</string>
-    <string name="dpPsychicLabel">\tPsychic\t</string>
+    <string name="dpCombatLabel">Combat</string>
+    <string name="dpMagicLabel">Magic</string>
+    <string name="dpPsychicLabel">Psychic</string>
 
     <string name="socialLabel">Social</string>
     <string name="perceptionLabel">Perception</string>
@@ -90,9 +89,9 @@
     <string name="subterfugeLabel">Subterfuge</string>
     <string name="creativeLabel">Creative</string>
 
-    <string name="pointsLabel">\tPoints\t</string>
-    <string name="classLabel">\tClass\t</string>
-    <string name="natLabel">\tNatural\t</string>
+    <string name="pointsLabel">Points</string>
+    <string name="classLabel">Class</string>
+    <string name="natLabel">Nat</string>
 
     <string name="acrobaticsLabel">Acrobatics</string>
     <string name="athleticsLabel">Athletics</string>
@@ -146,8 +145,5 @@
 
     <string name="natNotTaken">+ 0</string>
     <string name="natTaken">+ 5</string>
-
-    <string name="intItem">%1$d</string>
-    <string name="togglePointInt">&#160;- %1$d</string>
 
 </resources>
