Add Primary Characteristic Level Bonus
-apply level bonus input for the character's primary characteristics
-minor reordering of equipment fragment displays

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -83,6 +83,7 @@
     <string name = "baseLabel">Base</string>
     <string name = "boughtLabel">Bought</string>
     <string name = "modLabel">Mod</string>
+    <string name = "bonusLabel">Bonus</string>
     <string name = "specialLabel">Spec</string>
     <string name = "totalLabel">Total</string>
 
