Arrange Character Page
-redesign the composed format of the character page
-implement refresh function for the character page's viewModel
-refactor NumberInput to be an outlined textfield
-implement TextInput item
-reorganize viewModel folder

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,7 @@
     <string name = "classText">Class:</string>
     <string name = "raceText">Race:</string>
     <string name = "levelText">Level:</string>
+    <string name = "expText">Exp:</string>
 
     <string name = "nav_open">Open</string>
     <string name = "nav_close">Close</string>
