--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -154,4 +154,6 @@
     <string name = "phrLabel">PhR</string>
     <string name = "vrLabel">VR</string>
     <string name = "psrLabel">PsR</string>
+
+    <string name = "selectLabel">Select</string>
 </resources>
