Back Fix and Other Additions
-implement backstack removal on page navigation
-implement row clickability for drawer navigation
-implement prevention of duplicate file names
-refactor how ScreenPage enumeration produces a related string
-create exit option on main page

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -156,4 +156,18 @@
     <string name = "psrLabel">PsR</string>
 
     <string name = "selectLabel">Select</string>
+
+    <string name = "charLabel">Character</string>
+    <string name = "combatLabel">Combat</string>
+    <string name = "secondaryLabel">Secondary Characteristics</string>
+    <string name = "advantageLabel">Advantages</string>
+    <string name = "modulesLabel">Modules</string>
+    <string name = "kiLabel">Ki</string>
+    <string name = "magicLabel">Magic</string>
+    <string name = "summonLabel">Summoning</string>
+    <string name = "psychicLabel">Psychic</string>
+    <string name = "equipmentLabel">Equipment</string>
+
+    <string name = "saveLabel">Save</string>
+    <string name = "exitLabel">Exit</string>
 </resources>
